--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
             </div> 
 
             <div class="content-illustration">
-                <div class="illu-1">
+                <div class="illu">
                     <div class="boxes"></div>
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
-                <div class="illu-2">
+                <div class="illu">
                     <div class="boxes"></div>
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
-                <div class="illu-3">
+                <div class="illu">
                     <div class="boxes"></div>
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
-                <div class="illu-4">
+                <div class="illu">
                     <div class="boxes"></div>
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="container-3">
-            <div class="qoute">
+            <div class="quote">
                 <p>This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
                 <aside><strong>-Thor, God of Thunder</strong></aside>
             </div>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="sign-up-button-cto">
-                    <button>Sign up</button>
+                    <button class="signup-btn-cto">Sign up</button>
                 </div>
             </div>
         </div>
