--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="sign-up-button-cto">
-                    <button class="signup-btn-cto">Sign up</button>
+                    <button class="signup-btn-cto"><a href="index.html">Sign up</a></button>
                 </div>
             </div>
         </div>
