--- a/index.html
+++ b/index.html
@@ -63,25 +63,29 @@
 
         <div class="container-2">
             <div class="content-title-2">
-                <h3>Some random information.</h3>
+                <h3>Grahm's Favorite</h3>
             </div> 
 
             <div class="content-illustration">
                 <div class="illu">
-                    <div class="boxes"></div>
-                    <p class="subtext">this is some subtext under an illustration or image</p>
+                    <div class="boxes"><img src="img/Gatling_laser_(Fallout_4).webp" alt="Gatling_laser_(Fallout_4).webp" class="weapons"></div>
+                    <p class="subtext">Gatling Laser</p>
+                    <p class="desc">The Gatling laser is a rapid firing automatic heavy weapon. It uses fusion cores as ammo and each full core houses 500 shots.</p>
                 </div>
                 <div class="illu">
-                    <div class="boxes"></div>
-                    <p class="subtext">this is some subtext under an illustration or image</p>
+                    <div class="boxes"><img src="img/F76SR_Pepper_Shaker.webp" class="weapons"></div>
+                    <p class="subtext">Pepper Shaker</p>
+                    <p class="desc">heavy rotary barrel machine shotgun. It takes one second to spin up before it begins automatically firing shotgun blasts of eight projectiles.</p>
                 </div>
                 <div class="illu">
-                    <div class="boxes"></div>
-                    <p class="subtext">this is some subtext under an illustration or image</p>
+                    <div class="boxes"><img src="img/F76_Plasma_gatling_left.webp" class="weapons"></div>
+                    <p class="subtext">Gatling Plasma</p>
+                    <p class="desc"> It fires very rapidly with relatively poor accuracy. Rather than individual bullets or cells, it uses plasma cores.</p>
                 </div>
                 <div class="illu">
-                    <div class="boxes"></div>
-                    <p class="subtext">this is some subtext under an illustration or image</p>
+                    <div class="boxes"><img src="img/Fo76_Pyrolyzer.webp" class="weapons"></div>
+                    <p class="subtext">Flamer</p>
+                    <p class="desc">The flamer is a short range heavy weapon that deals sustained fire damage in a cone in front of it. It immolates targets on critical kills.</p>
                 </div>
             </div>
         </div>
