--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="content-1">
                 <div class="header">
                     <div class="logo-container">
-                        <h1>SECRET SHOP</h1>
+                        <h1>KEMISCAPE VAULT</h1>
                     </div>
     
                     <div class="header-links">
@@ -64,6 +64,7 @@
         <div class="container-2">
             <div class="content-title-2">
                 <h3>Grahm's Favorite</h3>
+                <p>His collections are all consist of heavy guns. Easy and fun to use but heavy!</p>
             </div> 
 
             <div class="content-illustration">
@@ -90,23 +91,45 @@
             </div>
         </div>
 
-        <div class="container-3">
-            <div class="quote">
-                <p>This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-                <aside><strong>-Thor, God of Thunder</strong></aside>
+        <div class="container-3"> 
+            <div class="news">
+                <div class="left-news">
+                    <p class="title-news">76 Modern Living Bundle free with Prime Gaming & Xbox Game Pass</p>
+                    <ul>
+                        <li><strong>News</strong></li>
+                        <li>Fallout 76</li>
+                        <li>January 26, 2023</li>
+                    </ul>
+                    <p class="description-news">Grab the Modern Living Bundle.</p>
+                    <p><a href="index.html">Read more</a></p>
+                </div>
+
+                <div class="img-right">
+                    <img src="img/F76_Modern_Living_Bundle_LCARD_776x470.png" alt="F76_Modern_Living_Bundle_LCARD_776x470.png" class="modern-living">
+                </div>
             </div>
         </div>
 
         <div class="container-4">
             <div class="content-signup">
                 <div class="call-to-action">
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h4>STAY UPDATED!</h4>
+                    <p>Be the first to see new updates and changes, plus exclusive promotional dispatches and so much more.</p>
                 </div>
 
                 <div class="sign-up-button-cto">
-                    <button class="signup-btn-cto"><a href="index.html">Sign up</a></button>
+                    <button class="signup-btn-cto"><a href="index.html">LOGIN & CONNECT</a></button>
                 </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="footer-contents">
+                <ul>
+                    <li>Copyrights reserved Kemiscape</li>
+                    <li>Bethesda</li>
+                    <li>2023</li>
+                </ul>
             </div>
         </div>
     </div>
