--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <ul>
                     <li>Copyrights reserved Kemiscape</li>
                     <li>Bethesda</li>
-                    <li>2023</li>
+                    <li>January 31, 2023</li>
                 </ul>
             </div>
         </div>
