--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <title>Inside the Vault</title>
 </head>
 <body>
     <div class="wrapper">
@@ -17,6 +18,8 @@
                 <div class="header">
                     <div class="logo-container">
                         <h1>KEMISCAPE VAULT</h1>
+                        <img src="img/fallout76icon.png" alt="fallout76icon.png" height="32px"
+                         width="32px">
                     </div>
     
                     <div class="header-links">
@@ -126,9 +129,9 @@
         <div class="footer">
             <div class="footer-contents">
                 <ul>
-                    <li>Copyrights reserved Kemiscape</li>
-                    <li>Bethesda</li>
-                    <li>January 31, 2023</li>
+                    <li>© 2023 Kemiworks</li>
+                    <li></li>
+                    <li>Trademarks belong to their respective owners. All Rights Reserved.</li>
                 </ul>
             </div>
         </div>
