--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
             <div class="footer-contents">
                 <ul>
                     <li>© 2023 Kemiworks</li>
-                    <li></li>
                     <li>Trademarks belong to their respective owners. All Rights Reserved.</li>
+                    <li>Odin Project</li>
                 </ul>
             </div>
         </div>
